tests/type-errors/field_method.arl
archetype field_method

asset an_asset {
  id : string;
}

entry a () {
  effect {
    var l = an_asset.count;
    require (true)
  }
}
